tests/unmatched-open-comment/out.txt
error: unmatched open comment
  ┌─ inp.sml:1:11
  │
1 │ val x = 3 (*
  │           ^^

lexing failed
